--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,5 @@
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  author: Ben Thomasson
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -14,7 +12,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: Apache
 
   min_ansible_version: 1.2
 
