--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 galaxy_info:
   author: Ben Thomasson
+  description: Network Architect tools
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
